--- a/style.css
+++ b/style.css
@@ -735,7 +735,7 @@ footer span a:hover{
 			}
 		}
 .loadtext{
-	font-family:'quicksand', cursive ;
+	font-family: 'Wallpoet', cursive;
 	margin:1em;
 	color:#fff;
 	
