--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+@font-face{
+	font-family:'28 Days Later';
+	src:url(ffmax\font\28 Days Later.ttf);
+}
+@font-face{
+	font-family:'A Charming Font';
+	src:url(ffmax\font\Achafexp.ttf);
+}
+@font-face{
+	font-family:'Viner Hand ITC Regular';
+	src:url(ffmax\font\VINERITC.TTF);
+}
+@font-face{
+	font-family:'Gabriola Regular';
+	src:url(ffmax\font\Gabriola.ttf);
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 :root {
   --bg-color:#000;
