--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('http://fonts.cdnfonts.com/css/a-charming-font');
 @font-face{
 	font-family:'28 Days Later';
 	src:url(ffmax\font\28 Days Later.ttf);
