--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-  display:;
+  display:flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
